adding the triggering of check button with enter key in input guess of user, r key to trigger the again button, restrict the digit limit to 2, non-numeric key on input etc.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" />
+        <!-- the "oninput" is to limit the digit up to 2 digit only -->
+        <input
+          type="number"
+          min="1"
+          max="20"
+          oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+          maxlength="2"
+          class="guess"
+        />
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
